[gd_scene load_steps=4 format=3 uid="uid://b85o2lekt7s7g"]

[ext_resource type="Texture2D" uid="uid://5ff8mh7ufknp" path="res://icon.svg" id="1_554e8"]
[ext_resource type="Script" path="res://player/player.gd" id="1_nnot6"]
[ext_resource type="PackedScene" uid="uid://3fh08smu7rqr" path="res://character_stats/character_stats.tscn" id="2_35xn5"]

[node name="Player" type="Node2D"]
script = ExtResource("1_nnot6")

[node name="CharacterStats" parent="." instance=ExtResource("2_35xn5")]
hp = 100
hp_max = 100
defense = 2

[node name="Icon" type="Sprite2D" parent="."]
texture = ExtResource("1_554e8")

[node name="HpProgressBar" type="ProgressBar" parent="."]
offset_left = -152.0
offset_top = -160.0
offset_right = 153.0
offset_bottom = -121.0

[node name="AttackProgressBar" type="ProgressBar" parent="."]
offset_left = -152.0
offset_top = -112.0
offset_right = 153.0
offset_bottom = -73.0
